# Trading-App

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  NSE.csv  README.Docker.md  README.md  api.py  close_tab.html  compose.yaml  config.py  enums.py  main.py  models.py  pyproject.toml  requirements.txt  token.py  trading-app.db  unkown_user.html  utils.py
app/: Token.py  api.py  config.py  database.py  enums.py  logger.py  main.py  models.py  utils.py
docker/: Dockerfile
templates/: close_tab.html  internal_error.html
